--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 extended: 1.1,
                 high: 1.2
             },
-            orderCriteria: ["공통 가설", "철거 공사", "설비 공사", "방수 공사", "단열 공사", "창호 공사", "도어 공사", "목공사", "전기 공사", "에어컨 공사", "타일 공사", "도배 공사", "마루 공사", "욕실 공사", "도장 공사", "필름 공사", "가구 공사", "마감 공사", "기타 공사"],
+            orderCriteria: ["공통 가설", "철거 공사", "전기 공사", "창호 공사", "설비 공사", "방수 공사", "단열 공사", "목공사", "도어 공사", "타일 공사", "마루 공사", "도배 공사", "욕실 공사", "도장 공사", "필름 공사", "가구 공사", "에어컨 공사", "마감 공사", "기타 공사"],
             currentMode: 'search', // 'search' or 'meeting'
             meetingData: {
                 customerName: '',
